# teleinfo-parser

./: .gitignore  Cargo.toml
resources/test/: badchecksum.txt  frames.txt
src/: frame.rs  hc.rs  lib.rs
